--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://kvs1995.github.io",
+  "homepage": "https://kvs1995.github.io/react-portfolio",
   "dependencies": {
     "-": "^0.0.1",
     "@ant-design/icons": "^4.7.0",
